--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -103,11 +103,30 @@
 	"autocomplete.section.main": "Key concept suggestion",
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
+	"billing.address": "Address",
+	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
-	"billing.budget_description": "Set a monthly limit on overspending.",
-	"billing.customized_plan": "If you need a customized plan for your company, contact us at",
+	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
+	"billing.city": "City",
+	"billing.company": "Company",
+	"billing.contact": "Contact us",
+	"billing.cost_per_usage": "Cost-per-usage",
+	"billing.cost_per_usage.description": "The prices in the table below apply when the limits per month are exceeded.",
+	"billing.country": "Country",
+	"billing.custom_plan": "Custom plan",
+	"billing.customized_plan": "If you need to expand and customize a plan for your business, please do not hesitate to contact us.",
+	"billing.estimate_cost": "Estimate your cost",
+	"billing.free": "Free",
+	"billing.month": "Month",
+	"billing.notes": "*Suggestions are 1/4 of a search and questions are 2 searches",
+	"billing.payment_details": "Payment details",
+	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
+	"billing.payment_method": "Payment method",
+	"billing.state": "State",
+	"billing.subscription_plans": "Subscription plans",
 	"billing.upgrade": "Upgrade",
 	"billing.vat_id": "VAT ID",
+	"billing.zip": "ZIP",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure you want to delete this resource?",
 	"empty.body": "We couldn’t find any relevant results. ",
