--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -92,8 +92,27 @@
 	"autocomplete.section.main": "Palabras clave sugeridas",
 	"autocomplete.section.next_words": "Palabras sugeridas",
 	"autocomplete.section.paragraph": "Párrafo sugerido",
-	"billing.customized_plan": "Si necesita un plan personalizado para su empresa, contáctenos en",
+	"billing.address": "Dirección",
+	"billing.billing_details": "Datos de facturación",
+	"billing.city": "Ciudad",
+	"billing.company": "Empresa",
+	"billing.contact": "Contactar",
+	"billing.cost_per_usage": "Coste por uso",
+	"billing.cost_per_usage.description": "Los precios de la siguiente tabla se aplican cuando se superan los límites mensuales.",
+	"billing.country": "País",
+	"billing.custom_plan": "Plan personalizado",
+	"billing.customized_plan": "Si necesitas ampliar o personalizar un plan para tu empresa, no dudes en contactar con nosotros.",
+	"billing.estimate_cost": "Estima tu coste",
+	"billing.free": "Gratuito",
+	"billing.month": "Mes",
+	"billing.payment_details": "Datos de pago",
+	"billing.payment_details.description": "El pago no se hará efectivo hasta finales de mes en función del uso realizado.",
+	"billing.payment_method": "Método de pago",
+	"billing.state": "Provincia",
+	"billing.subscription_plans": "Planes de subscripción",
 	"billing.upgrade": "Actualizar",
+	"billing.vat_id": "VAT ID",
+	"billing.zip": "Código postal",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
 	"empty.body": "Parece que no hemos podido encontrar ningún resultado lo suficientemente relevante. Por favor, vuelve a intentarlo",
