--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -92,19 +92,27 @@
 	"autocomplete.section.main": "Paraules clau suggerides",
 	"autocomplete.section.next_words": "Paraules suggerides",
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
-	"billing.annual": "Anual",
-	"billing.automatically_renewed": "Es renova automàticament cada mes",
-	"billing.company_name": "Nom de l'empresa",
-	"billing.customized_plan": "Si necessites un pla personalitzat per a la teva empresa, contacta amb nosaltres a",
-	"billing.monthly": "Mensual",
-	"billing.monthly_consumibles": "Consums mensuals",
-	"billing.plan": "Plan",
-	"billing.plan_settings": "Opcions del pla",
-	"billing.plans": "Plans",
-	"billing.plans_available": "Plans disponibles",
-	"billing.subscribe": "Subscriure's",
-	"billing.total_now": "Total pendent ara {{num}}",
+	"billing.address": "Adreça",
+	"billing.billing_details": "Dades de facturació",
+	"billing.city": "Ciutat",
+	"billing.company": "Empresa",
+	"billing.contact": "Contactar",
+	"billing.cost_per_usage": "Cost per ús",
+	"billing.cost_per_usage.description": "Els preus de la taula s'apliquen quan s'exedeixen els límits mensuals.",
+	"billing.country": "País",
+	"billing.custom_plan": "Pla personalitzat",
+	"billing.customized_plan": "Si necessites ampliar o personalitzar un pla per a la teva empresa, no dubtis a contactar amb nosaltres.",
+	"billing.estimate_cost": "Estima el teu cost",
+	"billing.free": "Gratuït",
+	"billing.month": "Mes",
+	"billing.payment_details": "Dades de pagament",
+	"billing.payment_details.description": "El pagament no es farà efectiu fins a finals de mes en funció del vostre ús.",
+	"billing.payment_method": "Mètode de pagament",
+	"billing.state": "Província",
+	"billing.subscription_plans": "Plans de subscripció",
 	"billing.upgrade": "Actualitzar",
+	"billing.vat_id": "VAT ID",
+	"billing.zip": "Còdi postal",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
 	"empty.body": "Sembla que no hem pogut trobar cap resultats que sigui prou rellevant. Si us plau, intenta-ho de nou. ",
