--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -103,43 +103,30 @@
 	"autocomplete.section.main": "Key concept suggestion",
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
-	"billing.add_card": "Add a Card",
-	"billing.add_limit": "Add a limit",
-	"billing.annual": "Annual",
-	"billing.automatically_renewed": "Automatically renewed every month",
+	"billing.address": "Address",
+	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
-	"billing.budget_description": "Set a monthly limit on overspending.",
-	"billing.company_name": "Company name",
-	"billing.customized_plan": "If you need a customized plan for your company, contact us at",
-	"billing.enter_card_details": "Enter your card details",
-	"billing.free_account": "Free account",
-	"billing.monthly": "Monthly",
-	"billing.monthly_consumibles": "Monthly usage",
-	"billing.no_limit": "No limit to usage",
-	"billing.no_limit_description": "If you do not set a usage limit, you agree to pay for any level of usage without us notifying you.",
-	"billing.parameter.docs_no_media": "Docs No Media",
-	"billing.parameter.max_size_file_media": "Max Size File Media",
-	"billing.parameter.max_size_file_no_media": "Max Size File No Media",
-	"billing.parameter.max_storage_bytes": "Max Storage bytes",
-	"billing.parameter.max_storage_docs": "Max Storage docs",
-	"billing.parameter.media": "Media",
-	"billing.parameter.ml_characters": "ML Characters",
-	"billing.parameter.multiple_kb": "More than 1 Knowledge box",
-	"billing.parameter.parallel_processing": "Parallel processing",
-	"billing.parameter.searches": "Searches",
-	"billing.parameter.train_hours": "Train hours",
+	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
+	"billing.city": "City",
+	"billing.company": "Company",
+	"billing.contact": "Contact us",
+	"billing.cost_per_usage": "Cost-per-usage",
+	"billing.cost_per_usage.description": "The prices in the table below apply when the limits per month are exceeded.",
+	"billing.country": "Country",
+	"billing.custom_plan": "Custom plan",
+	"billing.customized_plan": "If you need to expand and customize a plan for your business, please do not hesitate to contact us.",
+	"billing.estimate_cost": "Estimate your cost",
+	"billing.free": "Free",
+	"billing.month": "Month",
+	"billing.notes": "*Suggestions are 1/4 of a search and questions are 2 searches",
 	"billing.payment_details": "Payment details",
-	"billing.plan": "Plan",
-	"billing.plan_settings": "Plan settings",
-	"billing.plans": "Plans",
-	"billing.plans_available": "Plans available",
-	"billing.subscribe": "Subscribe",
-	"billing.subscribing_to": "Subscribing to",
-	"billing.teams_account": "Teams account",
-	"billing.total_now": "Total due now {{num}}",
+	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
+	"billing.payment_method": "Payment method",
+	"billing.state": "State",
+	"billing.subscription_plans": "Subscription plans",
 	"billing.upgrade": "Upgrade",
-	"billing.upgrade_to": "Upgrade to",
 	"billing.vat_id": "VAT ID",
+	"billing.zip": "ZIP",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure you want to delete this resource?",
 	"empty.body": "We couldn’t find any relevant results. ",
