--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -1,31 +1,35 @@
 {
-  "generic.cancel": "Cancelar",
-  "generic.logout": "Salir",
-  "generic.next": "Siguiente",
-  "generic.switch_account": "Cambia de cuenta",
-  "generic.upload": "Subir",
-  "home.active": "Activo",
-  "home.add": "Nueva subida",
-  "home.completed": "Completado",
-  "home.files": "{{num}} ficheros",
-  "home.pending": "Pendiente",
-  "login.button": "Iniciar sessión",
-  "login.headline": "La manera fácil y rápida de ingerir datos",
-  "login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
-  "upload.files": "Ficheros a subir",
-  "upload.folder.drop": "Arrastra una carpeta",
-  "upload.folder.selected": "La carpeta contiene {{num}} archivos",
-  "upload.refresh": "Refrescar {{field}}",
-  "upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
-  "upload.s3.region": "Región",
-  "upload.s3.region_help": "Por ejemplo: eu-west-3",
-  "upload.select.all": "Seleccionar todo",
-  "upload.select.search": "Busca",
-  "upload.select.title": "Selecciona los archivos",
-  "upload.source.help": "Elige el origen desde la que quieres subir todos los archivos",
-  "upload.source.title": "Origen",
-  "upload.steps.destination": "Selecciona el destino",
-  "upload.steps.files": "Escoge los ficheros",
-  "upload.steps.sources": "Selecciona el origen",
-  "upload.steps.upload": "Súbelo!"
+	"generic.cancel": "Cancelar",
+	"generic.logout": "Salir",
+	"generic.next": "Siguiente",
+	"generic.switch_account": "Cambia de cuenta",
+	"generic.upload": "Subir",
+	"home.active": "Activo",
+	"home.add": "Nueva subida",
+	"home.completed": "Completado",
+	"home.files": "{{num}} ficheros",
+	"home.pending": "Pendiente",
+	"login.button": "Iniciar sessión",
+	"login.headline": "La manera fácil y rápida de ingerir datos",
+	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
+	"upload.data": "Subir datos",
+	"upload.files": "Ficheros a subir",
+	"upload.folder.drop": "Arrastra una carpeta",
+	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
+	"upload.refresh": "Refrescar {{field}}",
+	"upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
+	"upload.s3.region": "Región",
+	"upload.s3.region_help": "Por ejemplo: eu-west-3",
+	"upload.select.all": "Seleccionar todo",
+	"upload.select.search": "Busca",
+	"upload.select.title": "Selecciona los archivos",
+	"upload.source.help": "Elige el origen desde la que quieres subir todos los archivos",
+	"upload.source.title": "Origen",
+	"upload.steps.configure": "Configurar",
+	"upload.steps.data": "Elegir datos",
+	"upload.steps.destination": "Destino",
+	"upload.steps.files": "Escoge los ficheros",
+	"upload.steps.source": "Selecciona el origen",
+	"upload.steps.sources": "Selecciona el origen",
+	"upload.steps.upload": "Súbelo!"
 }
