--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -28,8 +28,5 @@
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Elegir datos",
 	"upload.steps.destination": "Destino",
-	"upload.steps.files": "Escoge los ficheros",
-	"upload.steps.source": "Selecciona el origen",
-	"upload.steps.sources": "Selecciona el origen",
-	"upload.steps.upload": "Súbelo!"
+	"upload.steps.source": "Selecciona el origen"
 }
