Modify source configuration step

--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
 	"generic.cancel": "Cancel",
 	"generic.logout": "Log out",
-	"generic.next": "Next step",
+	"generic.save_continue": "Save & Continue",
 	"generic.switch_account": "Switch account",
 	"generic.upload": "Upload",
 	"home.active": "Active",
@@ -23,7 +23,10 @@
 	"upload.select.all": "Select all",
 	"upload.select.search": "Search",
 	"upload.select.title": "Select files",
-	"upload.source.help": "Choose source for uploads",
+	"upload.source.description": "Choose source for uploads",
+	"upload.source.help": "Refer to our documentation on how to add files from {{source}}.",
+	"upload.source.quick_access": "Save the login credentials for future uploads from the same source.",
+	"upload.source.quick_access_name": "Name your quick access",
 	"upload.source.title": "Source integration",
 	"upload.steps.configure": "Configure",
 	"upload.steps.data": "Choose data",
