--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -1,7 +1,7 @@
 {
 	"generic.cancel": "Cancel·lar",
 	"generic.logout": "Sortir",
-	"generic.next": "Següent",
+	"generic.save_continue": "Desar i continuar",
 	"generic.switch_account": "Canviar de compte",
 	"generic.upload": "Pujar",
 	"home.active": "Actiu",
@@ -23,7 +23,10 @@
 	"upload.select.all": "Seleccionar tot",
 	"upload.select.search": "Cerca",
 	"upload.select.title": "Selecciona els fitxers",
-	"upload.source.help": "Trieu l'origen des del qual voleu pujar tots els fitxers",
+	"upload.source.description": "Trieu l'origen des del qual voleu pujar tots els fitxers",
+	"upload.source.help": "Consulta la documentació sobre com afegir arxius des de {{source}}.",
+	"upload.source.quick_access": "Desar les credencials d'autenticació per futures pujades des del mateix origen.",
+	"upload.source.quick_access_name": "Anomena l'accés directe",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Escollir dades",
