--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -1,7 +1,7 @@
 {
 	"generic.cancel": "Cancelar",
 	"generic.logout": "Salir",
-	"generic.next": "Siguiente",
+	"generic.save_continue": "Guardar y continuar",
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.upload": "Subir",
 	"home.active": "Activo",
@@ -23,7 +23,10 @@
 	"upload.select.all": "Seleccionar todo",
 	"upload.select.search": "Busca",
 	"upload.select.title": "Selecciona los archivos",
-	"upload.source.help": "Elige el origen desde la que quieres subir todos los archivos",
+	"upload.source.description": "Elige el origen desde la que quieres subir todos los archivos",
+	"upload.source.help": "Consulte la documentación sobre cómo añadir archivos desde {{source}}.",
+	"upload.source.quick_access": "Guardar las credenciales de autenticación para futuras subidas desde el mismo origen.",
+	"upload.source.quick_access_name": "Nombra el acceso directo",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Elegir datos",
