--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -1,7 +1,7 @@
 {
 	"generic.cancel": "Annuler",
 	"generic.logout": "Déconnexion",
-	"generic.next": "Suivant",
+	"generic.save_continue": "Enregistrer et continuer",
 	"generic.switch_account": "Changer de compte",
 	"generic.upload": "Télécharger",
 	"home.active": "Actifs",
@@ -23,7 +23,10 @@
 	"upload.select.all": "Sélectionner tout",
 	"upload.select.search": "Rechercher",
 	"upload.select.title": "Sélectionnez les fichiers",
-	"upload.source.help": "Choisissez la source depuis laquelle télécharger les fichiers",
+	"upload.source.description": "Choisissez la source depuis laquelle télécharger les fichiers",
+	"upload.source.help": "Reportez-vous à la documentation sur la façon d'ajouter des fichiers à partir de {{source}}.",
+	"upload.source.quick_access": "Enregistrez les informations de connexion pour les futurs téléchargements à partir de la même source.",
+	"upload.source.quick_access_name": "Nommez votre raccourci",
 	"upload.source.title": "Source d'origine",
 	"upload.steps.configure": "Configurer",
 	"upload.steps.data": "Choisir les données",
