Add learning config in kb creation

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -577,17 +577,14 @@
 	"stash.added_user": "{{user}} has been added",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
 	"stash.create": "Create a knowledge box",
-	"stash.create.anonymization": "Anonymization ",
-	"stash.create.anonymization-help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all resources in the Knowledge Box",
-	"stash.create.anonymization-warning": "Anonymization will only affect the new data that is entered.",
+	"stash.create.anonymization_model": "Anonymization ",
+	"stash.create.anonymization_model.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all resources in the Knowledge Box",
+	"stash.create.configuration": "Configuration",
 	"stash.create.error": "Something went wrong when creating the knowledge box. Please try again.",
 	"stash.create.failure": "Something is wrong at the moment. Contact your administrator.",
 	"stash.create.in_progress": "Knowledge box creation in progress…",
-	"stash.create.language.mono": "One language",
-	"stash.create.language.mono-help": "Choose the language of the documentation in this knowledge box",
-	"stash.create.language.multi": "Multilingual",
-	"stash.create.languages": "Languages",
-	"stash.create.languages-help": "Select if information you will upload to the KB is in one or more languages. If there’s only one language, select it for better accuracy.",
+	"stash.create.semantic_model": "Languages",
+	"stash.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
 	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this knowledge box (defaults to the account’s zone)",
 	"stash.create_service_access": "Create new Service Access",
 	"stash.delete.delete": "Delete knowledge box?",
