Modify selection and destination steps

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -13,6 +13,8 @@
 	"login.headline": "La forma més fàcil i ràpida d'ingerir dades",
 	"login.not-connected": "No esteu connectat, feu clic al botó per iniciar sessió al navegador",
 	"upload.data": "Pujar dades",
+	"upload.destination.description": "Envia les dades seleccionades a",
+	"upload.destination.title": "Definir la destinació",
 	"upload.files": "Fitxers a pujar",
 	"upload.folder.drop": "Arrossega una carpeta",
 	"upload.folder.selected": "La carpeta conté {{num}} arxius",
@@ -21,8 +23,8 @@
 	"upload.s3.region": "Regió",
 	"upload.s3.region_help": "Per exemple: eu-west-3",
 	"upload.select.all": "Seleccionar tot",
+	"upload.select.description": "Selecciona les dades que vols pujar",
 	"upload.select.search": "Cerca",
-	"upload.select.title": "Selecciona els fitxers",
 	"upload.source.description": "Trieu l'origen des del qual voleu pujar tots els fitxers",
 	"upload.source.help": "Consulta la documentació sobre com afegir arxius des de {{source}}.",
 	"upload.source.quick_access": "Desar les credencials d'autenticació per futures pujades des del mateix origen.",
