--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -13,6 +13,8 @@
 	"login.headline": "La manera fácil y rápida de ingerir datos",
 	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
 	"upload.data": "Subir datos",
+	"upload.destination.description": "Envía los datos seleccionados a",
+	"upload.destination.title": "Definir la destinación",
 	"upload.files": "Ficheros a subir",
 	"upload.folder.drop": "Arrastra una carpeta",
 	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
@@ -21,8 +23,8 @@
 	"upload.s3.region": "Región",
 	"upload.s3.region_help": "Por ejemplo: eu-west-3",
 	"upload.select.all": "Seleccionar todo",
+	"upload.select.description": "Selecciona los datos que quieres subir",
 	"upload.select.search": "Busca",
-	"upload.select.title": "Selecciona los archivos",
 	"upload.source.description": "Elige el origen desde la que quieres subir todos los archivos",
 	"upload.source.help": "Consulte la documentación sobre cómo añadir archivos desde {{source}}.",
 	"upload.source.quick_access": "Guardar las credenciales de autenticación para futuras subidas desde el mismo origen.",
