--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -13,6 +13,8 @@
 	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
 	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
 	"upload.data": "télécharger des données",
+	"upload.destination.description": "Transférez vos données sélectionnées vers",
+	"upload.destination.title": "Définir la destination",
 	"upload.files": "Fichiers à télécharger",
 	"upload.folder.drop": "Poser le dossier ici",
 	"upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
@@ -21,8 +23,8 @@
 	"upload.s3.region": "Région",
 	"upload.s3.region_help": "par exemple: eu-west-3",
 	"upload.select.all": "Sélectionner tout",
+	"upload.select.description": "Sélectionnez les données que vous souhaitez télécharger",
 	"upload.select.search": "Rechercher",
-	"upload.select.title": "Sélectionnez les fichiers",
 	"upload.source.description": "Choisissez la source depuis laquelle télécharger les fichiers",
 	"upload.source.help": "Reportez-vous à la documentation sur la façon d'ajouter des fichiers à partir de {{source}}.",
 	"upload.source.quick_access": "Enregistrez les informations de connexion pour les futurs téléchargements à partir de la même source.",
