--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -13,6 +13,8 @@
 	"login.headline": "The easiest and fastest way to ingest data",
 	"login.not-connected": "You’re not connected, click the button to log in",
 	"upload.data": "Upload data",
+	"upload.destination.description": "Push your selected data to",
+	"upload.destination.title": "Define the destination",
 	"upload.files": "Files to upload",
 	"upload.folder.drop": "Drop folder here",
 	"upload.folder.selected": "Selected folder has {{num}} files",
@@ -21,8 +23,8 @@
 	"upload.s3.region": "Region",
 	"upload.s3.region_help": "e.g. us-east-1",
 	"upload.select.all": "Select all",
+	"upload.select.description": "Select the data you want to upload",
 	"upload.select.search": "Search",
-	"upload.select.title": "Select files",
 	"upload.source.description": "Choose source for uploads",
 	"upload.source.help": "Refer to our documentation on how to add files from {{source}}.",
 	"upload.source.quick_access": "Save the login credentials for future uploads from the same source.",
