Update onboarding text [sc-4519]

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -296,6 +296,8 @@
 	"login.create_one": "Crea'n un!",
 	"login.description": "Coneix el què la teva empresa sap",
 	"login.email": "Correu electrònic",
+	"login.email.signup": "Correu electrònic professional",
+	"login.email.signup.placeholder": "Només es permeten les adreces de correu electrònic de l'empresa",
 	"login.email_already_exists": "Ja existeix un usuari registrat amb aquest correu electrònic",
 	"login.email_sent": "T’hem enviat un mail! :)",
 	"login.error.auth_error": "Error d'autentificació.",
@@ -324,7 +326,7 @@
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
 	"login.sign-up-with": "Registra't amb {{provider}}",
 	"login.signup": "Registra't!",
-	"login.subtitle": "Troba-ho tot.",
+	"login.subtitle": "Oferint les respostes adequades a partir de les vostres dades internes.",
 	"login.terms_and_conditions": "Termes i Condicions",
 	"login.title": "Benvinguts a Nuclia",
 	"login.token_expired": "El token ha caducat",
