--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -317,6 +317,8 @@
 	"login.create_one": "Create",
 	"login.description": "Know what your company knows",
 	"login.email": "Email",
+	"login.email.signup": "Professional email",
+	"login.email.signup.placeholder": "Only company email addresses allowed",
 	"login.email_already_exists": "This email address already exists! ",
 	"login.email_sent": "We’ve sent you an email!",
 	"login.error.auth_error": "Authentication error.",
@@ -345,7 +347,7 @@
 	"login.scope.kbs_write": "Modify your Knowledge boxes",
 	"login.sign-up-with": "Sign up with {{provider}}",
 	"login.signup": "Sign Up",
-	"login.subtitle": "Find everything.",
+	"login.subtitle": "Delivering the right answers from your internal data.",
 	"login.terms_and_conditions": "Terms & Conditions",
 	"login.title": "Welcome to Nuclia",
 	"login.token_expired": "Token has expired",
