--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -296,6 +296,8 @@
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
 	"login.email": "Correo electrónico",
+	"login.email.signup": "Correo electrónico profesional",
+	"login.email.signup.placeholder": "Solo se permiten direcciones de correo electrónico de la empresa",
 	"login.email_already_exists": "Ya existe un usuario registrado con este correo electrónico",
 	"login.email_sent": "Te hemos enviado un mail! :)",
 	"login.error.auth_error": "Error de autenticación.",
@@ -324,7 +326,7 @@
 	"login.scope.kbs_write": "Modificar tus cajas de conocimiento",
 	"login.sign-up-with": "Regístrese con {{provider}}",
 	"login.signup": "Regístrate!",
-	"login.subtitle": "Encuentra todo.",
+	"login.subtitle": "Brindando las respuestas correctas a partir de sus datos internos.",
 	"login.terms_and_conditions": "Términos y Condiciones",
 	"login.title": "Bienvenidos a Nuclia",
 	"login.token_expired": "El token ha caducado",
