--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -1,4 +1,5 @@
 {
+	"answer.chat-action": "Chatea con tus documentos",
 	"entities.annotated": "Anotaciones",
 	"entities.annotations": "Anotaciones",
 	"entities.date": "Fechas",
