--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+	"answer.chat-action": "Discutez avec vos documents",
 	"entities.annotated": "Annotations",
 	"entities.annotations": "Annotations",
 	"entities.date": "Dates",
