--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -1,4 +1,5 @@
 {
+	"answer.chat-action": "Xateja amb els teus documents",
 	"entities.annotated": "Anotacions",
 	"entities.annotations": "Anotacions",
 	"entities.date": "Dates",
