--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -1,5 +1,6 @@
 {
 	"answer.chat-action": "Xateja amb els teus documents",
+	"answer.placeholder": "Parlem",
 	"answer.sources": "Fonts",
 	"entities.annotated": "Anotacions",
 	"entities.annotations": "Anotacions",
