--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -1,5 +1,6 @@
 {
 	"answer.chat-action": "Chatea con tus documentos",
+	"answer.placeholder": "Charlemos",
 	"answer.sources": "Fuentes",
 	"entities.annotated": "Anotaciones",
 	"entities.annotations": "Anotaciones",
