Modify history page

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -4,11 +4,14 @@
 	"generic.save_continue": "Desar i continuar",
 	"generic.switch_account": "Canviar de compte",
 	"generic.upload": "Pujar",
-	"home.active": "Actiu",
-	"home.add": "Nova pujada",
-	"home.completed": "Completat",
-	"home.files": "{{num}} fitxers",
-	"home.pending": "Pendent",
+	"history.active": "Pujades actives",
+	"history.back": "Tornar a l'historial",
+	"history.clean": "Netjar historial",
+	"history.data": "Dades",
+	"history.date": "Data",
+	"history.knowledge_box": "Caixa de coneixement",
+	"history.source": "Origen",
+	"history.title": "Historial de pujades",
 	"login.button": "Accedir",
 	"login.headline": "La forma més fàcil i ràpida d'ingerir dades",
 	"login.not-connected": "No esteu connectat, feu clic al botó per iniciar sessió al navegador",
