--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -4,11 +4,14 @@
 	"generic.save_continue": "Guardar y continuar",
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.upload": "Subir",
-	"home.active": "Activo",
-	"home.add": "Nueva subida",
-	"home.completed": "Completado",
-	"home.files": "{{num}} ficheros",
-	"home.pending": "Pendiente",
+	"history.active": "Subidas activas",
+	"history.back": "Volver al historial",
+	"history.clean": "Limpiar historial",
+	"history.data": "Datos",
+	"history.date": "Fecha",
+	"history.knowledge_box": "Caja de conocimiento",
+	"history.source": "Origen",
+	"history.title": "Historial de subidas",
 	"login.button": "Iniciar sessión",
 	"login.headline": "La manera fácil y rápida de ingerir datos",
 	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
