--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -4,11 +4,14 @@
 	"generic.save_continue": "Enregistrer et continuer",
 	"generic.switch_account": "Changer de compte",
 	"generic.upload": "Télécharger",
-	"home.active": "Actifs",
-	"home.add": "Nouveau téléchargement",
-	"home.completed": "Terminés",
-	"home.files": "{{num}}} fichiers",
-	"home.pending": "En attente",
+	"history.active": "Téléchargements actifs",
+	"history.back": "Retour à l'histoire",
+	"history.clean": "Nettoyer historique",
+	"history.data": "Données",
+	"history.date": "Date",
+	"history.knowledge_box": "Knowledge box",
+	"history.source": "Source",
+	"history.title": "Historique des téléchargements",
 	"login.button": "Se connecter",
 	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
 	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
