--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -4,11 +4,14 @@
 	"generic.save_continue": "Save & Continue",
 	"generic.switch_account": "Switch account",
 	"generic.upload": "Upload",
-	"home.active": "Active",
-	"home.add": "New upload",
-	"home.completed": "Completed",
-	"home.files": "{{num}} files",
-	"home.pending": "Pending",
+	"history.active": "Active uploads",
+	"history.back": "Back to history",
+	"history.clean": "Clean history",
+	"history.data": "Data",
+	"history.date": "Date",
+	"history.knowledge_box": "Knowledge box",
+	"history.source": "Source",
+	"history.title": "Upload history",
 	"login.button": "Log in",
 	"login.headline": "The easiest and fastest way to ingest data",
 	"login.not-connected": "You’re not connected, click the button to log in",
