[sc-4241] Implement the new flow in desktop app (#619)
* Add sidebar

* Remove steps component

* Modify source configuration step

* Refactor sidebar

* Fix tests

* Modify selection and destination steps

* Remove confirmation step

* Modify history page

* Increment version

* Fix Dropbox connector

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -1,31 +1,38 @@
 {
-  "generic.cancel": "Cancel·lar",
-  "generic.logout": "Sortir",
-  "generic.next": "Següent",
-  "generic.switch_account": "Canviar de compte",
-  "generic.upload": "Pujar",
-  "home.active": "Actiu",
-  "home.add": "Nova pujada",
-  "home.completed": "Completat",
-  "home.files": "{{num}} fitxers",
-  "home.pending": "Pendent",
-  "login.button": "Accedir",
-  "login.headline": "La forma més fàcil i ràpida d'ingerir dades",
-  "login.not-connected": "No esteu connectat, feu clic al botó per iniciar sessió al navegador",
-  "upload.files": "Fitxers a pujar",
-  "upload.folder.drop": "Arrossega una carpeta",
-  "upload.folder.selected": "La carpeta conté {{num}} arxius",
-  "upload.refresh": "Actualització {{field}}",
-  "upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
-  "upload.s3.region": "Regió",
-  "upload.s3.region_help": "Per exemple: eu-west-3",
-  "upload.select.all": "Seleccionar tot",
-  "upload.select.search": "Cerca",
-  "upload.select.title": "Selecciona els fitxers",
-  "upload.source.help": "Trieu l'origen des del qual voleu pujar tots els fitxers",
-  "upload.source.title": "Origen",
-  "upload.steps.destination": "Selecciona la destinació",
-  "upload.steps.files": "Escull els fitxers",
-  "upload.steps.sources": "Selecciona l'origen",
-  "upload.steps.upload": "Puja-ho!"
+	"generic.cancel": "Cancel·lar",
+	"generic.logout": "Sortir",
+	"generic.save_continue": "Desar i continuar",
+	"generic.switch_account": "Canviar de compte",
+	"generic.upload": "Pujar",
+	"history.active": "Pujades actives",
+	"history.back": "Tornar a l'historial",
+	"history.clean": "Netjar historial",
+	"history.data": "Dades",
+	"history.date": "Data",
+	"history.knowledge_box": "Caixa de coneixement",
+	"history.source": "Origen",
+	"history.title": "Historial de pujades",
+	"login.button": "Accedir",
+	"login.headline": "La forma més fàcil i ràpida d'ingerir dades",
+	"login.not-connected": "No esteu connectat, feu clic al botó per iniciar sessió al navegador",
+	"upload.data": "Pujar dades",
+	"upload.destination.description": "Envia les dades seleccionades a",
+	"upload.destination.title": "Definir la destinació",
+	"upload.folder.drop": "Arrossega una carpeta",
+	"upload.folder.selected": "La carpeta conté {{num}} arxius",
+	"upload.refresh": "Actualització {{field}}",
+	"upload.s3.region": "Regió",
+	"upload.s3.region_help": "Per exemple: eu-west-3",
+	"upload.select.all": "Seleccionar tot",
+	"upload.select.description": "Selecciona les dades que vols pujar",
+	"upload.select.search": "Cerca",
+	"upload.source.description": "Trieu l'origen des del qual voleu pujar tots els fitxers",
+	"upload.source.help": "Consulta la documentació sobre com afegir arxius des de {{source}}.",
+	"upload.source.quick_access": "Desar les credencials d'autenticació per futures pujades des del mateix origen.",
+	"upload.source.quick_access_name": "Anomena l'accés directe",
+	"upload.source.title": "Origen",
+	"upload.steps.configure": "Configurar",
+	"upload.steps.data": "Escollir dades",
+	"upload.steps.destination": "Destinació",
+	"upload.steps.source": "Selecciona l'origen"
 }
