--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -1,31 +1,38 @@
 {
-  "generic.cancel": "Cancelar",
-  "generic.logout": "Salir",
-  "generic.next": "Siguiente",
-  "generic.switch_account": "Cambia de cuenta",
-  "generic.upload": "Subir",
-  "home.active": "Activo",
-  "home.add": "Nueva subida",
-  "home.completed": "Completado",
-  "home.files": "{{num}} ficheros",
-  "home.pending": "Pendiente",
-  "login.button": "Iniciar sessión",
-  "login.headline": "La manera fácil y rápida de ingerir datos",
-  "login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
-  "upload.files": "Ficheros a subir",
-  "upload.folder.drop": "Arrastra una carpeta",
-  "upload.folder.selected": "La carpeta contiene {{num}} archivos",
-  "upload.refresh": "Refrescar {{field}}",
-  "upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
-  "upload.s3.region": "Región",
-  "upload.s3.region_help": "Por ejemplo: eu-west-3",
-  "upload.select.all": "Seleccionar todo",
-  "upload.select.search": "Busca",
-  "upload.select.title": "Selecciona los archivos",
-  "upload.source.help": "Elige el origen desde la que quieres subir todos los archivos",
-  "upload.source.title": "Origen",
-  "upload.steps.destination": "Selecciona el destino",
-  "upload.steps.files": "Escoge los ficheros",
-  "upload.steps.sources": "Selecciona el origen",
-  "upload.steps.upload": "Súbelo!"
+	"generic.cancel": "Cancelar",
+	"generic.logout": "Salir",
+	"generic.save_continue": "Guardar y continuar",
+	"generic.switch_account": "Cambia de cuenta",
+	"generic.upload": "Subir",
+	"history.active": "Subidas activas",
+	"history.back": "Volver al historial",
+	"history.clean": "Limpiar historial",
+	"history.data": "Datos",
+	"history.date": "Fecha",
+	"history.knowledge_box": "Caja de conocimiento",
+	"history.source": "Origen",
+	"history.title": "Historial de subidas",
+	"login.button": "Iniciar sessión",
+	"login.headline": "La manera fácil y rápida de ingerir datos",
+	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
+	"upload.data": "Subir datos",
+	"upload.destination.description": "Envía los datos seleccionados a",
+	"upload.destination.title": "Definir la destinación",
+	"upload.folder.drop": "Arrastra una carpeta",
+	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
+	"upload.refresh": "Refrescar {{field}}",
+	"upload.s3.region": "Región",
+	"upload.s3.region_help": "Por ejemplo: eu-west-3",
+	"upload.select.all": "Seleccionar todo",
+	"upload.select.description": "Selecciona los datos que quieres subir",
+	"upload.select.search": "Busca",
+	"upload.source.description": "Elige el origen desde la que quieres subir todos los archivos",
+	"upload.source.help": "Consulte la documentación sobre cómo añadir archivos desde {{source}}.",
+	"upload.source.quick_access": "Guardar las credenciales de autenticación para futuras subidas desde el mismo origen.",
+	"upload.source.quick_access_name": "Nombra el acceso directo",
+	"upload.source.title": "Origen",
+	"upload.steps.configure": "Configurar",
+	"upload.steps.data": "Elegir datos",
+	"upload.steps.destination": "Destino",
+	"upload.steps.source": "Selecciona el origen"
 }
