--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -1,31 +1,38 @@
 {
-  "generic.cancel": "Annuler",
-  "generic.logout": "Déconnexion",
-  "generic.next": "Suivant",
-  "generic.switch_account": "Changer de compte",
-  "generic.upload": "Télécharger",
-  "home.active": "Actifs",
-  "home.add": "Nouveau téléchargement",
-  "home.completed": "Terminés",
-  "home.files": "{{num}}} fichiers",
-  "home.pending": "En attente",
-  "login.button": "Se connecter",
-  "login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
-  "login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
-  "upload.files": "Fichiers à télécharger",
-  "upload.folder.drop": "Poser le dossier ici",
-  "upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
-  "upload.refresh": "Rafraîchir {{field}}",
-  "upload.review": "Vous avez sélectionné {{num}} fichiers. Vérifiez la sélection puis lancez le traitement.",
-  "upload.s3.region": "Région",
-  "upload.s3.region_help": "par exemple: eu-west-3",
-  "upload.select.all": "Sélectionner tout",
-  "upload.select.search": "Rechercher",
-  "upload.select.title": "Sélectionnez les fichiers",
-  "upload.source.help": "Choisissez la source depuis laquelle télécharger les fichiers",
-  "upload.source.title": "Source d'origine",
-  "upload.steps.destination": "Définir la destination",
-  "upload.steps.files": "Définir les fichiers",
-  "upload.steps.sources": "Sélectionner la source",
-  "upload.steps.upload": "Téléchargement !"
+	"generic.cancel": "Annuler",
+	"generic.logout": "Déconnexion",
+	"generic.save_continue": "Enregistrer et continuer",
+	"generic.switch_account": "Changer de compte",
+	"generic.upload": "Télécharger",
+	"history.active": "Téléchargements actifs",
+	"history.back": "Retour à l'histoire",
+	"history.clean": "Nettoyer historique",
+	"history.data": "Données",
+	"history.date": "Date",
+	"history.knowledge_box": "Knowledge box",
+	"history.source": "Source",
+	"history.title": "Historique des téléchargements",
+	"login.button": "Se connecter",
+	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
+	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
+	"upload.data": "télécharger des données",
+	"upload.destination.description": "Transférez vos données sélectionnées vers",
+	"upload.destination.title": "Définir la destination",
+	"upload.folder.drop": "Poser le dossier ici",
+	"upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
+	"upload.refresh": "Rafraîchir {{field}}",
+	"upload.s3.region": "Région",
+	"upload.s3.region_help": "par exemple: eu-west-3",
+	"upload.select.all": "Sélectionner tout",
+	"upload.select.description": "Sélectionnez les données que vous souhaitez télécharger",
+	"upload.select.search": "Rechercher",
+	"upload.source.description": "Choisissez la source depuis laquelle télécharger les fichiers",
+	"upload.source.help": "Reportez-vous à la documentation sur la façon d'ajouter des fichiers à partir de {{source}}.",
+	"upload.source.quick_access": "Enregistrez les informations de connexion pour les futurs téléchargements à partir de la même source.",
+	"upload.source.quick_access_name": "Nommez votre raccourci",
+	"upload.source.title": "Source d'origine",
+	"upload.steps.configure": "Configurer",
+	"upload.steps.data": "Choisir les données",
+	"upload.steps.destination": "Destination",
+	"upload.steps.source": "Sélectionner la source"
 }
