--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -1,31 +1,38 @@
 {
-  "generic.cancel": "Cancel",
-  "generic.logout": "Log out",
-  "generic.next": "Next step",
-  "generic.switch_account": "Switch account",
-  "generic.upload": "Upload",
-  "home.active": "Active",
-  "home.add": "New upload",
-  "home.completed": "Completed",
-  "home.files": "{{num}} files",
-  "home.pending": "Pending",
-  "login.button": "Log in",
-  "login.headline": "The easiest and fastest way to ingest data",
-  "login.not-connected": "You’re not connected, click the button to log in",
-  "upload.files": "Files to upload",
-  "upload.folder.drop": "Drop folder here",
-  "upload.folder.selected": "Selected folder has {{num}} files",
-  "upload.refresh": "Refresh {{field}}",
-  "upload.review": "You have selected {{num}} files. Review the selected files and begin the process.",
-  "upload.s3.region": "Region",
-  "upload.s3.region_help": "e.g. us-east-1",
-  "upload.select.all": "Select all",
-  "upload.select.search": "Search",
-  "upload.select.title": "Select files",
-  "upload.source.help": "Choose source for uploads",
-  "upload.source.title": "Source integration",
-  "upload.steps.destination": "Define destination",
-  "upload.steps.files": "Define the files",
-  "upload.steps.sources": "Select the sources",
-  "upload.steps.upload": "Uploading"
+	"generic.cancel": "Cancel",
+	"generic.logout": "Log out",
+	"generic.save_continue": "Save & Continue",
+	"generic.switch_account": "Switch account",
+	"generic.upload": "Upload",
+	"history.active": "Active uploads",
+	"history.back": "Back to history",
+	"history.clean": "Clean history",
+	"history.data": "Data",
+	"history.date": "Date",
+	"history.knowledge_box": "Knowledge box",
+	"history.source": "Source",
+	"history.title": "Upload history",
+	"login.button": "Log in",
+	"login.headline": "The easiest and fastest way to ingest data",
+	"login.not-connected": "You’re not connected, click the button to log in",
+	"upload.data": "Upload data",
+	"upload.destination.description": "Push your selected data to",
+	"upload.destination.title": "Define the destination",
+	"upload.folder.drop": "Drop folder here",
+	"upload.folder.selected": "Selected folder has {{num}} files",
+	"upload.refresh": "Refresh {{field}}",
+	"upload.s3.region": "Region",
+	"upload.s3.region_help": "e.g. us-east-1",
+	"upload.select.all": "Select all",
+	"upload.select.description": "Select the data you want to upload",
+	"upload.select.search": "Search",
+	"upload.source.description": "Choose source for uploads",
+	"upload.source.help": "Refer to our documentation on how to add files from {{source}}.",
+	"upload.source.quick_access": "Save the login credentials for future uploads from the same source.",
+	"upload.source.quick_access_name": "Name your quick access",
+	"upload.source.title": "Source integration",
+	"upload.steps.configure": "Configure",
+	"upload.steps.data": "Choose data",
+	"upload.steps.destination": "Destination",
+	"upload.steps.source": "Select the source"
 }
