--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -1,5 +1,6 @@
 {
 	"answer.chat-action": "Chat with your docs",
+	"answer.input.label": "Chat input",
 	"answer.placeholder": "Let's chat",
 	"answer.sources": "Sources",
 	"entities.annotated": "Annotated",
