Fix viewer to work with standalone
  - Add standalone option to ViewerWidget
  - Fix preview to set standalone mode on viewer when needed
  - Fix app.init service to use prod CDN on standalone
  - Add a method to load the PDF src with proper header on standalone

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -476,7 +476,7 @@
 	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
 	"resource.field-file.new-file": "Nou fitxer:",
 	"resource.field-link": "Camp d'Enllaç",
-	"resource.field-no-paragraph": "Aquest camp no conté cap paràgraf.",
+	"resource.field-no-paragraph": "No s'ha extret cap paràgraf per a aquest camp.",
 	"resource.field-text": "Camp de Text",
 	"resource.field-text-body-label": "Cos del text",
 	"resource.field-text-format-label": "Format de text",
