--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -476,7 +476,7 @@
 	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
 	"resource.field-file.new-file": "Archivo nuevo:",
 	"resource.field-link": "Campo de Enlace",
-	"resource.field-no-paragraph": "Este campo no contiene ningún párrafo.",
+	"resource.field-no-paragraph": "No hay párrafo extraído para este campo.",
 	"resource.field-text": "Campo de Texto",
 	"resource.field-text-body-label": "Cuerpo de texto",
 	"resource.field-text-format-label": "Formato de texto",
